@@ -1,21 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX newrelic_rpm-2.10.8-no-webrick.patch 682 RMD160 3a7f7cc82c58b1786f64d89bebcaac1bbce27985 SHA1 88618f3d1941455b2d5639b5323ea62425ad3327 SHA256 626a62453edbc2f03f838f6d1cf08754ae0a680928600be5daa5f8e049c5bd6b
 AUX newrelic_rpm-2.9.9-no-webrick.patch 768 RMD160 5b98cc31b9c10a5ff736450c24731271da5f7ad0 SHA1 a450a3e6e3031ddb48f47aaa894a8d5c440da79e SHA256 757967a408b76510e545cdb1f4ae9b232d0e44c61645ceae465150b52fb859d9
 DIST newrelic_rpm-2.10.8.gem 471040 RMD160 0a00bd19161310bd181a938c206f5f5d4c192614 SHA1 257e961b880feef91b3ee81ee1b5714d52e13142 SHA256 804e6cec7adc6b6e12e979851eeef18c5a8ca67957e539131ef3832dc500829b
-DIST newrelic_rpm-2.9.4.gem 294400 RMD160 1572f2c147f0633312285494fd1725697a5435c3 SHA1 aaf7ca5942abe457d3ab3980b3b4f0c56c89ce49 SHA256 e8d87e5c7e83f31ca6c7ec30a811c991184d8df743feffb6d0996c6de9794458
-DIST newrelic_rpm-2.9.9.gem 294912 RMD160 afa2797bc4cdc445ccf506e124e1cf0d33af5b65 SHA1 1b10f83ea05d097149b194c375e0d3d7482b9f92 SHA256 6d0912fc56dedf809f7de713a7724784465e50b2c92559c594e85ded32e0319d
 EBUILD newrelic_rpm-2.10.8-r1.ebuild 735 RMD160 a1ee0ece5091ad5ee376bbcddab39ac44726e3c7 SHA1 8f509ae0ae64d8829fc144f822cb182696f01760 SHA256 7441f7e8c9b5495732bc4cd3784792f352d499e63e84a64d4c67684e66cda401
-EBUILD newrelic_rpm-2.10.8.ebuild 825 RMD160 8a95c0f751d9294a7a649b871fa23ecdf461f275 SHA1 5edbbf33ee2274545b1bb132c1519564653e8f02 SHA256 5ac4b52020c74ed95493e50ac01edbf5f13aa9ecc853a57440d637c87f0b08c5
-EBUILD newrelic_rpm-2.9.4.ebuild 415 RMD160 b3ecc225a2dd4f8a3a70f7529360dbdd0393c6bf SHA1 a2c291cb404e1124eb59d4cfbedcaa16aa9ff63f SHA256 7f6659e3f4fbbc3acd75cafe5a80bee5ce04d668804aac12a9dfd5085b90edd7
-EBUILD newrelic_rpm-2.9.9.ebuild 667 RMD160 b10a78dc48e7282c3c11e7b204897309b47a4d53 SHA1 0f1d8a0a5165ba00420109cefd4c12cb09af90fd SHA256 8ca1e8d6313a9b62e8645df3d52c9918f891f62fea4c4d5b8cffd0c5fe98db67
-MISC ChangeLog 976 RMD160 c7dfebd20a7126ec9f840ac037636eb0952d8d5f SHA1 43ad6385d8048f0cd181f6042f1f724e3649eb98 SHA256 216388290824b5cee22f12f204d5733d499abdec926dcd5e62e3c507b3b89e6e
+MISC ChangeLog 1242 RMD160 850c8e9805efa62d533f1b249166a6f26e3e92e5 SHA1 229b4f7c493b6d5ea97ee133abe25caa37c6a79f SHA256 61abf9125307fbf2550e09657fbc6bc336bf462a9aef67951028f5c0337f3539
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkv2NgYACgkQeM7EJeUH71MfDACeO4m8QVoPP5eYbcJnlxpw2STf
-XX8AoIFa2bMFkgu0sJ8DJp7KKPkQcfzd
-=VdLN
+iF4EAREIAAYFAkw0QxcACgkQZihJkut28Su1eAEAlY75g1r24k7YMEGNNKRnRSXa
+r9nM+gSMDIGOy5q02ckA/2CHSKYpVneHQGJfyT+84TQ3lcPO4ZYoEDrUzbGajmoL
+=mLpS
 -----END PGP SIGNATURE-----
