@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2010; Hans de Graaff <graaff@gentoo.org>
+  -newrelic_rpm-2.9.4.ebuild, -newrelic_rpm-2.9.9.ebuild,
+  files/newrelic_rpm-2.9.9-no-webrick.patch, -newrelic_rpm-2.10.8.ebuild,
+  files/newrelic_rpm-2.10.8-no-webrick.patch, metadata.xml:
+  Remove old versions.
+
 *newrelic_rpm-2.10.8-r1 (21 May 2010)
 
   21 May 2010; Hans de Graaff <graaff@gentoo.org>
